# govg.github.io

./: .gitignore  about.html  about.md  acads.html  acads.md  archive.html  contact.html  contact.md  homepage.cabal  index.html  site.hs  stack.yaml
.github/workflows/: deploy.yml
css/: syntax.css
posts/: 2017-01-08-hw.html  2017-05-05-aca.html  2017-05-05-aca.md
templates/: about.md  archive.html  contact.md  default.html  index.html
templates/posts/: 2017-01-08-hw.md
