cabal-version:      2.4
name:               homepage
version:            0.1.0.0
synopsis:           Personal website built with Hakyll
license:            MIT
author:             Govind Gopakumar
build-type:         Simple

executable site
    main-is:          site.hs
    build-depends:
        base >= 4.14 && < 5,
        hakyll >= 4.15,
        pandoc >= 3.0
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
